<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permdesc_write_settings">permdesc_write_settings</string>
	<string name="permlab_write_settings">permlab_write_settings</string>
	<string name="sharedUserLabel">sharedUserLabel</string>
    <string name="hello">Hello World, KingCAIActivity!</string>
    <string name="app_name">堂堂清</string>
    <string name="Title">Classroom Testing</string>
    <string name="StudentID">Please input student ID</string>
    <string name="Password">Please input Password</string>
    <string name="Login">Login</string>
    <string name="Test">Enter Test</string>	
    <string name="Exit">Exit</string>
    <string name="Commit">Commit</string>   
    <string name="Filter">Filter</string>
    <string name="FontSize">Font Size</string>    
    <string name="ColorScheme">Color Schemes</string>
    <string name="ManagerWifi">Refresh Network</string>
    <string name="SearchErrorTip">Please Input a Correct Item or \n switch to full questions view</string> 
    <string name="QuestionMarked"><font size="30">%d Questions are marked!</font></string>
    <string name="QuestionUndone"><font size="30">%d Questions are undone!</font></string>    
    <string name="QuestionIncorrect"><font size="30">%d Questions are incorrect!</font></string>   
    <string name="QuestionCorrect"><font size="30">%d Questions are correct!</font></string>    
    <string name="CommitTips">You have Committed the Answers!</string>    
    <string name="CommittingTitle">Commit Paper</string>
    <string name="CommitPromptMsg">Are you sure to commit the paper?</string> 
    <string name="ExitPromptTitle">Exit Application</string>    
    <string name="ExitPromptMsg">Are you sure to <b>EXIT</b> Test on line?</string>               
    <string name="OptionPanelTips">you have Committed the Answers, \n and you can\'t answer again!</string>
    <string name="AllQuestions">All Questions</string>    
    <string name="UndoneQuestions">Questions Undone</string>
    <string name="UncertainQuestions">Questions Uncertain</string>
    <string name="CorrectQuestions">Questions Correct</string>        
    <string name="IncorrectQuestions">Questions Incorrect</string>
    <string name="ModifyPassword">Modify Password</string>
    <string name="LoginOffline">Login Off-Line</string>  
    <string name="RefAnswer">Reference</string>      
    <string name="CurrentQuestion">the %s Question</string> 
    <string name="CurrentBlankQuestion">the %1$s(%2$s) Question</string>
    <string name="ServerNotFound">Server could not be found!</string>    
    <string name="SelectClassTip">Please SELECT a class!</string> 
    <string name="InputCorrectID">Please input a correct ID!</string>
    <string name="InputPassword">请输入正确的密码！</string>     
	<string name="Sure">OK</string>        
	<string name="Cancel">Cancel</string>	
	<string name="InputOldPasswd">Please input OLD password</string>	
	<string name="InputFirstNewPasswd">Please input NEW password</string>
	<string name="InputSecondPasswd">Please input NEW password again</string>		    
	<string name="BaseInfo">Base Information</string>
	<string name="AdvancedInfo">评测信息</string>			
	<string name="About">About</string>		
	<string name="AboutDetail">Software Name:\n %1$s \nVersion:\n %2$s \nAndroid Version:\n %3$s \nDistribute Date:\n %4$s \n</string>	
	<string name="CompanyName">Company Name</string>
	<string name="NoInfo">您尚未登录系统进行学习！</string>			
	<string name="AppInitStatus">请输入学号、密码以及班级</string>	
	<string name="FindSSIDStatus">正在查找wifi热点......</string>
	<string name="FindFailSSIDStatus">未找到wifi热点</string>	
	<string name="FoundSSIDStatus">已找到wifi热点</string>		
	<string name="ConnectSSIDStatus">正在连接wifi热点</string>	
	<string name="ConnectedSSIDStatus">已连接到wifi热点</string>
	<string name="ConnectedFailSSIDStatus">wifi热点连接失败</string>		
	<string name="QueryServerStatus">正在查找教师服务器</string>	
	<string name="FailQueryServerStatus">未找到教师服务器</string>	
	<string name="FoundServerStatus">教师服务器已找到，正在请求登录</string>	
	<string name="LoginServerStatus">正在请求登录教师服务器</string>	
	<string name="LoginTimeOut">登录超时，请确认教师服务器是否开启</string>	
	<string name="SuccessLoginStatus">登录成功，即将进入考试界面</string>	
	<string name="FailLoginErrID">登录失败，请检查用户名是否正确！</string>	
	<string name="FailLoginErrPwd">登录失败，请检查密码是否输入正确！</string>
	<string name="FailLoginErrReenter">登录失败，您已经交卷，不能重复登录！</string>
	<string name="FailLoginErrDoubleEnter">登录失败，该账号已登录！</string>	
	<string name="Setting">Setting</string>
	<string name="WifiSetting">Wifi Setting</string>	
	<string name="SecretTitle">%s is modified</string>
	<string name="PasswordTitle">Change Password</string>
	<string name="ErrNotInputID">Please input student number!</string>
	<string name="ErrNotSame">两次新密码输入不一致，请重新输入新密码！</string>
	<string name="ErrOldNewSame">新旧密码相同，请重新输入新密码！</string>
	<string name="PwdOK">密码修改成功！</string>
	<string name="PwdFail">密码修改失败！</string>	
	<string name="ExtraStudentInfo">继续加油，上次考试完成得很出色！</string>		
	<string name="Committing">正在交卷，请稍候...</string>
	<string name="CommittingFilter">正在交卷，无法使用该项功能</string>	
	<string name="Study">Study</string>
	<string name="Bookmark">Bookmark</string>	
	<string name="ProgressTipPaper">"正在下载试卷信息，请稍候..."</string>
	<string name="ProgressTipQuestion">正在下载试卷，共 %s 题，请稍候...</string>	
	<string name="ProgressTipAnswer">正在下载已答试题答案，请稍候...</string>	
	<string name="ProgressTipImage">正在下载图片，请稍候...</string>	
	<string name="PCCrash">\t\t教师服务器发生严重错误，应用程序将退出！</string>
	<string name="ReLogin">重新登录</string>
	<string name="BuildInApps">应用列表</string>
	<string name="WrongQuestions">错题集锦</string>			
	<string name="ServerTimeout">教师服务器响应超时</string>	
	<string name="DownloadComplete">试题下载结束</string>		
	<string name="DownloadInfo">共  %1$s 题， %2$s 已完成下载！</string>	
	<string name="EnforcedCommitTips"> %s 分钟后将自动交卷！</string>
	<string name="Logout">注销</string>	
	<string name="Settings">软件设置</string>
	<string name="NoPrivilegeTitle">权限错误</string>
	<string name="NoPrivilege">您没有获得老师的授权，无法执行此项操作！</string>	
	<string name="NotLogin">尚未登录，无法执行此项操作！</string>			
</resources>