<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"	     
    android:orientation="vertical"
    android:background="@drawable/common_frame_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/PCCrash"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBoxRelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReLogin" />
    
    <Button
        android:id="@+id/buttonCrash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Sure" />
	    
</LinearLayout>