<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"	     
    android:orientation="vertical"
    android:background="@drawable/common_frame_bg">

    <EditText
        android:id="@+id/editTextDebugCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password" 
        android:singleLine="true" >

        <requestFocus />
    </EditText>
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center_horizontal"	     
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/buttonDebugOK"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/Sure" />
	
	    <Button
	        android:id="@+id/buttonDebugCancel"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/Cancel" />
	    
    </LinearLayout>        
</LinearLayout>