<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:orientation="horizontal" >
     
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"
	        android:layout_marginRight="35dp"
	        android:paddingTop="10dp"
	        android:text="@string/app_name"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#B00BCC" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="85dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="right"
	        android:hint="@string/LoginOffline" />

	</LinearLayout>
	
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="90dip"
        android:layout_height="120dip"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <TableLayout
        android:id="@+id/tableLayout1"      
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/txtStudentID" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:hint="@string/StudentID"
                android:numeric="integer" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false" >

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:freezesText="true"
                android:hint="@string/Password"
                android:inputType="textCapWords|textVisiblePassword"
                android:singleLine="true" />

        </TableRow>

        <Spinner
            android:id="@+id/spinnerSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnExit"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Exit" />



            <Button
                android:id="@+id/btnLogin"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Login" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtLoginOffline"
                android:layout_width="160dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="5dip"
                android:paddingTop="10dip"
                android:text="@string/LoginOffline"
                android:textColor="#0000FF" />

            <TextView
                android:id="@+id/txtModifyPassword"
                android:layout_width="160dip"
                android:layout_height="30dip"
                android:textColor="#0000FF"  
                android:paddingLeft="5dip"
                android:paddingTop="10dip"
                android:text="@string/ModifyPassword"/>

        </LinearLayout>
        
<!-- 
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"           
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


            </LinearLayout>

        </ScrollView>
 -->

        <ExpandableListView
            android:id="@+id/expandableListViewStudyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

    </TableLayout>

</LinearLayout>