<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="#EEEEEE"
    android:orientation="vertical" >
   	<TextView
		android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:paddingLeft="6dp"
        android:layout_gravity="center"
        android:background="#8B8B8B"
        android:text="@string/app_name"
        android:textColor="#EFEFEF"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="3dip" >

        <Button
            android:id="@+id/btnCommit"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:background="@drawable/button_commit_filter"
            android:text="@string/Commit"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtGoto"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:layout_marginTop="3dip"
            android:imeOptions="actionDone"
            android:numeric="integer"
            android:layout_gravity="center_vertical"             
            android:singleLine="true" >
        </EditText>
        
        <TextView
            android:id="@+id/txtAnswerInfo"
            android:layout_width="130dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:text="0/0"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:background="@drawable/button_commit_filter"
            android:text="@string/AllQuestions" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dip"
        android:background="#DCDCDC" />

    <ListView
        android:id="@+id/lstQuestions"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.72"
        android:listSelector="#00000000"
        android:cacheColorHint="#00000000"
		android:divider="@android:color/transparent"
    	android:background="#DCDCDC"
    	android:descendantFocusability="beforeDescendants"
        android:dividerHeight="2dip">

    </ListView>
<!-- android:drawSelectorOnTop="true" -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dip"
        android:background="#DCDCDC" />

    <LinearLayout
        android:id="@+id/linearLayoutDrawpanel"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="0.4"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

	           <ToggleButton
	               android:id="@+id/toggleButtonErase"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textOn=""
	               android:textOff=""
	               android:background="@drawable/ic_menu_eraser"/>
	           
	           <ToggleButton
	               android:id="@+id/toggleButtonWrite"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textOn=""
	               android:textOff=""
	               android:background="@drawable/btn_edit"/>

	           <ToggleButton
	               android:id="@+id/toggleButtonLine"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textOn=""
	               android:textOff=""
	               android:background="@drawable/btn_line"/>	           

	           <ToggleButton
	               android:id="@+id/toggleButtonCircle"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textOn=""
	               android:textOff=""
	               android:background="@drawable/btn_circle"/>
	           
	           <ToggleButton
	               android:id="@+id/toggleButtonRect"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textOn=""
	               android:textOff=""
	               android:background="@drawable/btn_rect"/>
	        </LinearLayout>

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Finish" 
                android:layout_weight="1"/>

        </LinearLayout>


		<com.king.cai.examination.KingDrawView
		    android:id="@+id/kingDrawViewPaint"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:background="@drawable/handwrite_bg"
		    android:focusable="true"
		    android:focusableInTouchMode="true" />
 
        
    </LinearLayout>	   
    <TextView
        android:id="@+id/textViewPaperStatus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"/>

</LinearLayout>